Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -65,7 +65,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1050px;
+  top: 1000px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -74,7 +74,7 @@
 .container4 {
   font-color: black;
   left: 10px;
-  top: 1025px;
+  top: 975px;
 }
 
 /* Changing the font for all divs. */
